# orbiter

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
.github/workflows/: build.yml  on-push.yml  reusable-build.yml
Addons/: CMakeLists.txt
Addons/AeroBrakeMFD/: ABMFD.cpp  ABMFD.h  ABOrbit.cpp  ABOrbit.h  ABReference.cpp  ABReference.h  ABToolkit.cpp  ABToolkit.h  Aero.cpp  Aero.h  AtmBreak.cpp  CMakeLists.txt  DeltaGlider.ld  DeltaGliderIV.ld  DeltaGliderXR1.ld  LDRec.cpp  Makefile  Readme.txt  XR2Ravenstar.ld  XR5Vanguard.ld  bitmap.cpp  bitmap.h
Addons/AeroBrakeMFD/Cdk/: AttCtrl.cpp  AttCtrl.h  CDK.cpp  CDK.h  EI.cpp  EI.h  Elements.cpp  Elements.h  GravBodyData.h  OrbiterMath.cpp  OrbiterMath.h  Prediction.cpp  Prediction.h  ThrustTorque.cpp  ThrustTorque.h
Config/: gamecontrollerdb.txt
Meshes/: Mir.msh
OVP/: CMakeLists.txt
OVP/D3D7Client/: CSphereMgr.cpp  Camera.cpp  CelSphere.cpp  CloudMgr.cpp  D3D7Client.cpp  D3D7Client.h  D3D7Client.rc  D3D7Config.cpp  D3D7Enum.cpp  D3D7Extra.cpp  D3D7Extra.h  D3D7Util.cpp  HazeMgr.cpp  Log.h  Mesh.cpp  MeshMgr.cpp  Particle.cpp  RingMgr.cpp  RingMgr.h  Scene.cpp  Scene.h  SurfMgr.cpp  TileMgr.cpp  TileMgr.h  VBase.cpp  VObject.cpp  VPlanet.cpp  VPlanet.h  VVessel.cpp  VideoTab.cpp  cloudmgr2.cpp  surfmgr2.cpp  surfmgr2.h  tilelabel.cpp  tilemgr2.cpp  tilemgr2.h  tilemgr2_imp.hpp  ztreemgr.cpp  ztreemgr.h
OVP/D3D9Client/: CMakeLists.txt  D3D9Client.cpp  D3D9Client.h  D3D9Pad.cpp  D3D9Surface.cpp  imgui_impl_dx9.cpp
OVP/GDIClient/: GDIClient.cpp  GDIClient.h
OVP/OGLClient/: Blit.fs  CMakeLists.txt  CSphereMgr.cpp  CSphereMgr.h  CelSphere.cpp  CelSphere.h  Cloud.fs  CloudMgr.cpp  CloudMgr.h  Exhaust.fs  GroundShadow.vs  Haze.vs  HazeMgr.cpp  HazeMgr.h  Light.cpp  Light.h  Mesh.fs  Mesh.vs  MeshManager.cpp  MeshManager.h  MeshUnlit.fs  MeshUnlit.vs  OGLCamera.cpp  OGLCamera.h  OGLClient.cpp  OGLClient.h  OGLFont.fs  OGLLine.fs  OGLLine.vs  OGLMesh.cpp  OGLMesh.h  OGLPad.cpp  OGLPad.h  OGLPoly.fs  Overlay.fs  Particle.cpp  Particle.fs  Particle.h  Renderer.cpp  Renderer.h  (+55 more)
OVP/OGLClient/shaders/: Cloud.fs  Cloud.vs  Common.inc  Constellations.fs  Ecliptic.fs  Exhaust.fs  Exhaust.vs  GroundShadow.fs  Haze.fs  LogDepth.inc  Mesh.fs  Mesh.vs  MeshUnlit.fs  MeshUnlit.vs  Overlay.fs  Overlay.vs  Particle.fs  Particle.vs  Ring.fs  Ring.vs  Spot.fs  Spot.vs  Tile.fs  Tile.vs  Types.inc  Uniforms.inc  Untextured.vs
Orbitersdk/include/: CelBodyAPI.h  DrawAPI.h  GraphicsAPI.h  MFDAPI.h  ModuleAPI.h  OrbiterAPI.h  Orbitersdk.h  imgui_extras.h
Orbitersdk/samples/AscentMFD/: AscentMFD.cpp
Orbitersdk/samples/DialogTemplate/: DialogTemplate.cpp
Orbitersdk/samples/LaunchpadParamTemplate/: LParam.cpp
Orbitersdk/samples/MFDTemplate/: MFDTemplate.cpp
Scenarios/Demo/: Test.scn
Scenarios/Tutorials/: ADI training.scn
Sound/XRSound/: CMakeLists.txt  LICENSE
Src/: CMakeLists.txt
Src/Celbody/Galsat/: CMakeLists.txt  Galsat.cpp  Galsat.h
Src/Celbody/Moon/: CMakeLists.txt  ELP82.cpp  Moon.cpp
Src/Celbody/Satsat/: CMakeLists.txt  Satsat.cpp  Satsat.h  Tass17.cpp
Src/Celbody/Vsop87/: CMakeLists.txt  Vsop87.cpp  Vsop87.h
Src/Orbiter/: Astro.cpp  Base.cpp  Base.h  Baseobj.cpp  Baseobj.h  Body.cpp  Body.h  CMakeLists.txt  CamAPI.cpp  Camera.cpp  Camera.h  Celbody.cpp  Celbody.h  Config.cpp  Config.h  Controller.cpp  Controller.h  ControllerNodes.cpp  ControllerNodes.h  D3dmath.cpp  D3dmath.h  Defpanel.cpp  Defpanel.h  DlgCamera.cpp  DlgCamera.h  DlgFocus.cpp  DlgFocus.h  DlgFunction.cpp  DlgFunction.h  DlgInfo.cpp  DlgInfo.h  DlgLaunchpad.cpp  DlgLaunchpad.h  DlgMap.cpp  DlgMap.h  DlgMenuCfg.cpp  DlgMgr.cpp  DlgMgr.h  DlgOptions.cpp  DlgRecorder.cpp  (+100 more)
Src/Orbiter/i18n/: Orbiter.fr_FR.po  Orbiter.ja_JP.po  Orbiter.pot
Src/Orbiter_ng/: CMakeLists.txt
Src/Orbitersdk/: CMakeLists.txt  Orbitersdk.cpp
Src/Plugin/: CMakeLists.txt
Src/Plugin/ExtMFD/: CMakeLists.txt  ExtMFD.cpp  MFDWindow.cpp  MFDWindow.h
Src/Plugin/FlightData/: CMakeLists.txt  FlightData.cpp
Src/Plugin/Framerate/: CMakeLists.txt  Framerate.cpp
Src/Plugin/LaunchpadExtensions/AtmConfig/: AtmConfig.cpp  CMakeLists.txt
Src/Plugin/LuaConsole/: CMakeLists.txt  ConsoleCfg.h  LuaConsole.cpp  LuaConsole.h
Src/Plugin/LuaMFD/: CMakeLists.txt  LuaMFD.cpp  LuaMFD.h  MfdInterpreter.cpp  MfdInterpreter.h
Src/Plugin/Meshdebug/: Meshdebug.cpp
Src/Plugin/Notes/: Notes.cpp
Src/Plugin/Rcontrol/: CMakeLists.txt  Rcontrol.cpp
Src/Plugin/ScnEditor/: CMakeLists.txt  Editor.cpp  Editor.h  ScnEditor.cpp  ScnEditorAPI.h
Src/Plugin/ScriptMFD/: CMakeLists.txt  ScriptMFD.cpp  ScriptMFD.h
Src/Plugin/TrackIR/: TrackIR.cpp  TrackIR.h
Src/Plugin/TransX/: CMakeLists.txt  TransXFunction.cpp  TransXFunction.h  basefunction.cpp  basefunction.h  doublelink.cpp  doublelink.h  globals.cpp  graph.cpp  graph.h  intercept.cpp  mapfunction.cpp  mfd.h  mfdfunction.cpp  mfdvarhandler.cpp  mfdvariable.cpp  mfdvariable.h  mfdvartypes.cpp  mfdvartypes.h  orbitelements.cpp  parser.cpp  planfunction.cpp  planfunction.h  shiplist.cpp  shiplist.h  transx.cpp  transx.h  transxstate.cpp  transxstate.h  viewstate.cpp  viewstate.h
Src/Vessel/: CMakeLists.txt
Src/Vessel/Atlantis/: CMakeLists.txt
Src/Vessel/Atlantis/Atlantis/: AscentAP.cpp  AscentAP.h  Atlantis.cpp  Atlantis.h  CMakeLists.txt  PlBayOp.cpp  PlBayOp.h
Src/Vessel/Atlantis/AtlantisConfig/: AtlantisConfig.cpp  CMakeLists.txt
Src/Vessel/Atlantis/Atlantis_SRB/: Atlantis_SRB.cpp  CMakeLists.txt
Src/Vessel/Atlantis/Atlantis_Tank/: Atlantis_Tank.cpp  CMakeLists.txt
Src/Vessel/DeltaGlider/: AAPSubsys.cpp  AAPSubsys.h  AerodynSubsys.cpp  AerodynSubsys.h  AirlockSwitch.cpp  AirlockSwitch.h  AvionicsSubsys.cpp  AvionicsSubsys.h  CMakeLists.txt  DGLua.cpp  DGSubsys.h  DGSwitches.cpp  DGSwitches.h  DeltaGlider.cpp  DeltaGlider.h  DockingSubsys.cpp  DockingSubsys.h  FailureSubsys.cpp  FailureSubsys.h  FuelMfd.cpp  FuelMfd.h  GearSubsys.cpp  (+29 more)
Tests/: CMakeLists.txt  Lua.Interpreter.cpp
Utils/: CMakeLists.txt  xgettext.lua
Utils/Versionstr/: Versionstr.cpp
Utils/meshc/: Mesh.cpp  Mesh.h  meshc.cpp
Utils/scramble/: scramble.cpp
(+160 files in other folders)
