add_subdirectory(XRVessels)
add_subdirectory(AeroBrakeMFD)
add_subdirectory(NASSP)
add_subdirectory(UCSO)
add_subdirectory(G42-200)
add_subdirectory(Deepstar)
add_subdirectory(Orb42S)
add_subdirectory(Ion4)
add_subdirectory(Ion6)
add_subdirectory(DarkEnergy-Spaceplane)
add_subdirectory(Better-ISS)
add_subdirectory(SSRMS)
